完成了支付支付宝支付模块

--- a/src/main/resources/templates/goods_list.html
+++ b/src/main/resources/templates/goods_list.html
@@ -30,6 +30,7 @@
 <body th:align="center">
 <div class="panel panel-default" style="height:70%;background-color:rgba(222,222,222,0.8)">
     <div class="panel-heading">秒杀商品列表</div>
+    <div class="panel-heading" align="center">【注】本网站只做学习之用！！！并非真实商城</div>
     <table class="table" id="goodslist">
         <tr>
             <td>商品名称</td>
